Enable Google/Baidu Analytics
Signed-off-by: Hao Lee <haolee.swjtu@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -745,16 +745,16 @@ needmoreshare2:
 # ---------------------------------------------------------------
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: a2977af7288592ff37146ec1edca1669
 
 # Growingio Analytics ID
 # Copyright 2015-2018 GrowingIO, Inc. More info available at https://www.growingio.com
 #growingio_analytics: #your projectId
 
 # Google Analytics
-#google_analytics:
-#  tracking_id:
-#  localhost_ignored: true
+google_analytics:
+  tracking_id: UA-145110903-4
+  localhost_ignored: true
 
 # CNZZ count
 #cnzz_siteid:
