--- a/_config.yml
+++ b/_config.yml
@@ -140,7 +140,7 @@ exturl: false
 
 # Baidu Webmaster tools verification.
 # See: https://ziyuan.baidu.com/site
-#baidu_site_verification:
+baidu_site_verification: HDPBz6qYbk
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
 baidu_push: false
